[Type checker] Validate class constraints for generic arguments of types.

Class constraints (spelled T: AnyObject) on generic types were not
getting checked on generic arguments. This appears to be a regression
introduced in Swift 4.0 with the removal of AnyObject, leading to a
fairly significant soundness hole that could produce crashers later
on.

Fixes SR-6841 / rdar://problem/36884025.

(cherry picked from commit ee99c8af99d4f1e9f4e2f992d6635becef49edad)